--- a/1 神经网络和深度学习/Week2 神经网络基础/任务2/任务2.ipynb
+++ b/1 神经网络和深度学习/Week2 神经网络基础/任务2/任务2.ipynb
@@ -173,8 +173,8 @@
   {
    "source": [
     "为了方便起见，我们要  \n",
-    "把训练集ndarray的形状变为（64$*$64$*$3，209）  \n",
-    "把测练集ndarray的形状变为（64$*$64$*$3，50）\n",
+    "把训练集ndarray的形状变为（64 \\* 64 \\* 3，209）  \n",
+    "把测练集ndarray的形状变为（64 \\* 64 \\* 3，50）\n",
     "## 注意:\n",
     "**这里有一个大坑**  \n",
     "\n",
